--- a/src/styles/components/admin/AdminDashBoard.module.css
+++ b/src/styles/components/admin/AdminDashBoard.module.css
@@ -5,11 +5,34 @@
     justify-content: flex-start;
     padding: 4rem;
     max-width: 1400px;
-    font-family: "Ubuntu";
+    font-family: 'Ubuntu';
 }
 
+.navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 1.5rem;
+    gap: 2rem;
+    border-bottom: 1px solid var(--yellow);
+    padding: 1rem;
+}
 
+.navbar > li {
+    list-style: none;
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: white;
+    cursor: pointer;
+}
 
+.navbar > li:hover {
+    text-decoration: underline;
+    color: var(--green);
+}
 
-
-
+@media (max-width: 700px) {
+    .navbar > li {
+        font-size: 0.8rem;
+    }
+}
