--- a/src/styles/components/admin/Automation.module.css
+++ b/src/styles/components/admin/Automation.module.css
@@ -14,7 +14,6 @@
     color: black;
     font-weight: 600;
     font-size: 1rem;
-    cursor: pointer;
     font-family: 'Ubuntu';
     border-radius: 0.2rem;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -133,3 +132,21 @@
     font-weight: 800;
     font-size: 0.6rem;
 }
+
+.container > button {
+    margin-left: auto;
+    margin-right: 1rem;
+    background: var(--red);
+    border: none;
+    font-size: 1.5rem;
+    max-height: 1.7rem;
+    color: white;
+    font-weight: 700;
+    border-radius: 0.1rem;
+}
+
+.container > button:hover {
+    filter: brightness(120%);
+    cursor: pointer;
+}
+
